--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
     "sqlite3": "^5.1.7"
   }
